// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalDetailLikersTooltipLabel /> should render a formatted message when one liker 1`] = `
<Truncate
  ellipsis="…"
  lines={1}
  trimWhitespace={false}
>
  <FormattedMessage
    id="proposal.likers.label"
    values={
      Object {
        "user": "user",
      }
    }
  />
</Truncate>
`;

exports[`<ProposalDetailLikersTooltipLabel /> should render nothing when no likers 1`] = `""`;

exports[`<ProposalDetailLikersTooltipLabel /> should render two formatted message when several likers 1`] = `
<span>
  <FormattedMessage
    id="proposal.likers.count"
    values={
      Object {
        "num": 2,
      }
    }
  />
  <br />
  <Truncate
    ellipsis="…"
    lines={1}
    trimWhitespace={false}
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "user 1<br/>user 2",
        }
      }
    />
  </Truncate>
</span>
`;
